Componentes/sgcWebSockets Professional 2022.1 for D7-11 Alexandria Source/libD11/sgcWebSocket_WinAPI.hpp

//-- forward type declarations -----------------------------------------------
struct WINHTTP_PROXY_INFO;
struct WINHTTP_ASYNC_RESULT;
struct WINHTTP_WEB_SOCKET_ASYNC_RESULT;
struct WINHTTP_WEB_SOCKET_STATUS;
//-- type declarations -------------------------------------------------------
typedef PWORD PUSHORT;
struct DECLSPEC_DRECORD WINHTTP_PROXY_INFO
{
public:
	unsigned dwAccessType;
	System::WideChar *lpszProxy;
	System::WideChar *lpszProxyBypass;
};
typedef WINHTTP_PROXY_INFO *LPWINHTTP_PROXY_INFO;
typedef WINHTTP_PROXY_INFO *PWINHTTP_PROXY_INFO;
typedef WINHTTP_PROXY_INFO TWinHttpProxyInfo;
typedef WINHTTP_PROXY_INFO *PWinHttpProxyInfo;
typedef void __stdcall (*WINHTTP_STATUS_CALLBACK)(void * hInternet, void * dwContext, unsigned dwInternetStatus, void * lpvStatusInformation, unsigned dwStatusInformationLength);
typedef WINHTTP_STATUS_CALLBACK *LPWINHTTP_STATUS_CALLBACK;
typedef WINHTTP_STATUS_CALLBACK TWinHttpStatusCallback;
typedef WINHTTP_STATUS_CALLBACK *PWinHttpStatusCallback;
struct DECLSPEC_DRECORD WINHTTP_ASYNC_RESULT
{
public:
	NativeUInt dwResult;
	unsigned dwError;
};
typedef WINHTTP_ASYNC_RESULT *LPWINHTTP_ASYNC_RESULT;
typedef WINHTTP_ASYNC_RESULT TWinHttpAsyncResult;
typedef WINHTTP_ASYNC_RESULT *PWinHttpAsyncResult;
enum DECLSPEC_DENUM WINHTTP_WEB_SOCKET_OPERATION : unsigned char { WINHTTP_WEB_SOCKET_SEND_OPERATION, WINHTTP_WEB_SOCKET_RECEIVE_OPERATION, WINHTTP_WEB_SOCKET_CLOSE_OPERATION, WINHTTP_WEB_SOCKET_SHUTDOWN_OPERATION };
typedef WINHTTP_WEB_SOCKET_OPERATION *PWINHTTP_WEB_SOCKET_OPERATION;
struct DECLSPEC_DRECORD WINHTTP_WEB_SOCKET_ASYNC_RESULT
{
public:
	WINHTTP_ASYNC_RESULT AsyncResult;
	WINHTTP_WEB_SOCKET_OPERATION Operation;
};
typedef WINHTTP_WEB_SOCKET_ASYNC_RESULT *LPWINHTTP_WEB_SOCKET_ASYNC_RESULT;
typedef WINHTTP_WEB_SOCKET_ASYNC_RESULT TWinHttpWebSocketAsyncResult;
typedef WINHTTP_WEB_SOCKET_ASYNC_RESULT *PWinHttpWebSocketAsyncResult;
enum DECLSPEC_DENUM WINHTTP_WEB_SOCKET_BUFFER_TYPE : unsigned char { WINHTTP_WEB_SOCKET_BINARY_MESSAGE_BUFFER_TYPE, WINHTTP_WEB_SOCKET_BINARY_FRAGMENT_BUFFER_TYPE, WINHTTP_WEB_SOCKET_UTF8_MESSAGE_BUFFER_TYPE, WINHTTP_WEB_SOCKET_UTF8_FRAGMENT_BUFFER_TYPE, WINHTTP_WEB_SOCKET_CLOSE_BUFFER_TYPE };
typedef WINHTTP_WEB_SOCKET_BUFFER_TYPE *PWINHTTP_WEB_SOCKET_BUFFER_TYPE;
struct DECLSPEC_DRECORD WINHTTP_WEB_SOCKET_STATUS
{
public:
	unsigned dwBytesTransferred;
	WINHTTP_WEB_SOCKET_BUFFER_TYPE eBufferType;
};
typedef WINHTTP_WEB_SOCKET_STATUS *LPWINHTTP_WEB_SOCKET_STATUS;
typedef WINHTTP_WEB_SOCKET_STATUS TWinHttpWebSocketStatus;
typedef WINHTTP_WEB_SOCKET_STATUS *PWinHttpWebSocketStatus;
enum DECLSPEC_DENUM WINHTTP_WEB_SOCKET_CLOSE_STATUS : unsigned short { WINHTTP_WEB_SOCKET_SUCCESS_CLOSE_STATUS = 1000, WINHTTP_WEB_SOCKET_ENDPOINT_TERMINATED_CLOSE_STATUS, WINHTTP_WEB_SOCKET_PROTOCOL_ERROR_CLOSE_STATUS, WINHTTP_WEB_SOCKET_INVALID_DATA_TYPE_CLOSE_STATUS, WINHTTP_WEB_SOCKET_EMPTY_CLOSE_STATUS = 1005, WINHTTP_WEB_SOCKET_ABORTED_CLOSE_STATUS, WINHTTP_WEB_SOCKET_INVALID_UTF8_CLOSE_STATUS, WINHTTP_WEB_SOCKET_POLICY_VIOLATION_CLOSE_STATUS, WINHTTP_WEB_SOCKET_MESSAGE_TOO_BIG_CLOSE_STATUS, WINHTTP_WEB_SOCKET_UNSUPPORTED_EXTENSIONS_CLOSE_STATUS, WINHTTP_WEB_SOCKET_SERVER_ERROR_CLOSE_STATUS, WINHTTP_WEB_SOCKET_SECURE_HANDSHAKE_ERROR_CLOSE_STATUS = 1015 };
typedef WINHTTP_WEB_SOCKET_CLOSE_STATUS *PWINHTTP_WEB_SOCKET_CLOSE_STATUS;
typedef System::LongBool __stdcall (*TsgcWinHttpCheckPlatform)(void);
typedef System::LongBool __stdcall (*TsgcWinHttpCloseHandle)(void * hInternet);
typedef void * __stdcall (*TsgcWinHttpOpen)(System::WideChar * pszAgentW, unsigned dwAccessType, System::WideChar * pszProxyW, System::WideChar * pszProxyBypassW, unsigned dwFlags);
typedef void * __stdcall (*TsgcWinHttpConnect)(void * hSession, System::WideChar * pswzServerName, System::Word nServerPort, unsigned dwReserved);
typedef void * __stdcall (*TsgcWinHttpOpenRequest)(void * hConnect, System::WideChar * pwszVerb, System::WideChar * pwszObjectName, System::WideChar * pwszVersion, System::WideChar * pwszReferrer, Winapi::Windows::PLPWSTR ppwszAcceptTypes, unsigned dwFlags);
//-- var, const, procedure ---------------------------------------------------
static const System::Word ERROR_WINHTTP_INVALID_OPERATION = System::Word(0x10dd);
#define WINHTTP_NO_PROXY_NAME (void*)(0)
#define WINHTTP_NO_PROXY_BYPASS (void*)(0)
#define WINHTTP_NO_REFERER (void*)(0)
#define WINHTTP_DEFAULT_ACCEPT_TYPES (void*)(0)
#define WINHTTP_NO_ADDITIONAL_HEADERS (void*)(0)
#define WINHTTP_NO_REQUEST_DATA (void*)(0)
static const System::Word ERROR_WINHTTP_SECURE_FAILURE = System::Word(0x2f8f);
static const System::Word ERROR_WINHTTP_CLIENT_AUTH_CERT_NEEDED = System::Word(0x2f0c);
static const System::Word ERROR_WINHTTP_OPERATION_CANCELLED = System::Word(0x2ef1);
static const System::Word ERROR_WINHTTP_CANNOT_CONNECT = System::Word(0x2efd);
static const System::Word ERROR_WINHTTP_CONNECTION_ERROR = System::Word(0x2efe);
static const System::Word ERROR_WINHTTP_INVALID_SERVER_RESPONSE = System::Word(0x2f78);
static const System::Word WINHTTP_SECURITY_FLAG_IGNORE_UNKNOWN_CA = System::Word(0x100);
static const System::Word WINHTTP_SECURITY_FLAG_IGNORE_CERT_DATE_INVALID = System::Word(0x2000);
static const System::Word WINHTTP_SECURITY_FLAG_IGNORE_CERT_CN_INVALID = System::Word(0x1000);
static const System::Word WINHTTP_SECURITY_FLAG_IGNORE_CERT_WRONG_USAGE = System::Word(0x200);
static const System::Word WINHTTP_CALLBACK_STATUS_CLOSING_CONNECTION = System::Word(0x100);
static const System::Word WINHTTP_CALLBACK_STATUS_CONNECTION_CLOSED = System::Word(0x200);
static const System::Word WINHTTP_CALLBACK_STATUS_HANDLE_CREATED = System::Word(0x400);
static const System::Word WINHTTP_CALLBACK_STATUS_HANDLE_CLOSING = System::Word(0x800);
static const System::Word WINHTTP_CALLBACK_STATUS_DETECTING_PROXY = System::Word(0x1000);
static const System::Word WINHTTP_CALLBACK_STATUS_REDIRECT = System::Word(0x4000);
static const System::Word WINHTTP_CALLBACK_STATUS_INTERMEDIATE_RESPONSE = System::Word(0x8000);
static const System::Word WINHTTP_FLAG_SECURE_PROTOCOL_TLS1_1 = System::Word(0x200);
static const System::Word WINHTTP_FLAG_SECURE_PROTOCOL_TLS1_2 = System::Word(0x800);
static const System::Word WINHTTP_FLAG_SECURE_PROTOCOL_ALL = System::Word(0xa80);
#define S_API_RECEIVE_RESPONSE L"Receive Response"
#define S_API_QUERY_DATA_AVAILABLE L"Query Data Available"
#define S_API_READ_DATA L"Read Data"
#define S_API_WRITE_DATA L"Write Data"
#define S_API_SEND_REQUEST L"Send Request"
static const System::Word WINHTTP_CALLBACK_FLAG_CLOSE_CONNECTION = System::Word(0x300);
static const System::Word WINHTTP_CALLBACK_FLAG_HANDLES = System::Word(0xc00);
static const System::Word WINHTTP_CALLBACK_FLAG_DETECTING_PROXY = System::Word(0x1000);
static const System::Word WINHTTP_CALLBACK_FLAG_REDIRECT = System::Word(0x4000);
static const System::Word WINHTTP_CALLBACK_FLAG_INTERMEDIATE_RESPONSE = System::Word(0x8000);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpCheckPlatform(void);
extern DELPHI_PACKAGE System::LongBool __stdcall WinHttpCloseHandle(void * hInternet);
extern DELPHI_PACKAGE void * __stdcall WinHttpOpen(System::WideChar * pszAgentW, unsigned dwAccessType, System::WideChar * pszProxyW, System::WideChar * pszProxyBypassW, unsigned dwFlags);
extern DELPHI_PACKAGE void * __stdcall WinHttpConnect(void * hSession, System::WideChar * pswzServerName, System::Word nServerPort, unsigned dwReserved);
extern DELPHI_PACKAGE void * __stdcall WinHttpOpenRequest(void * hConnect, System::WideChar * pwszVerb, System::WideChar * pwszObjectName, System::WideChar * pwszVersion, System::WideChar * pwszReferrer, Winapi::Windows::PLPWSTR ppwszAcceptTypes, unsigned dwFlags);