Componentes/sgcWebSockets Professional 2022.1 for D7-11 Alexandria Source/Source/sgcWebSocket_WinAPI.pas

{ ***************************************************************************
  sgcWebSocket component

  written by eSeGeCe
  copyright © 2022
  Email : info@esegece.com
  Web : http://www.esegece.com
  *************************************************************************** }

unit sgcWebSocket_WinAPI;

interface

{$I sgcVer.inc}

{$IFDEF SGC_WINHTTP}
Uses
  Windows, SysUtils;

type
  HINTERNET = Pointer;
  {$EXTERNALSYM HINTERNET}
  PUSHORT = PWord;

  {$IFDEF D7}
  ULONG_PTR = Cardinal;
  DWORD_PTR = ULONG_PTR;
  {$ENDIF}

  {$IFNDEF DXE}
    USHORT = Word;
    {$NODEFINE USHORT}
    PVOID = Pointer;
    {$NODEFINE PVOID}
    LPVOID = Pointer;
    {$NODEFINE LPVOID}
  {$ENDIF}

type
  INTERNET_PORT = Word;
  {$EXTERNALSYM INTERNET_PORT}
  WINHTTP_PROXY_INFO = record
    dwAccessType: DWORD;
    lpszProxy: LPWSTR;
    lpszProxyBypass: LPWSTR;
  end;
  LPWINHTTP_PROXY_INFO = ^WINHTTP_PROXY_INFO;
  PWINHTTP_PROXY_INFO = ^WINHTTP_PROXY_INFO;
  TWinHttpProxyInfo = WINHTTP_PROXY_INFO;
  PWinHttpProxyInfo = ^TWinHttpProxyInfo;

const
 ERROR_WINHTTP_INVALID_OPERATION = 4317;

const
  WINHTTP_ACCESS_TYPE_NAMED_PROXY = 3;
  WINHTTP_OPTION_PROXY = 38;
  WINHTTP_AUTH_TARGET_PROXY = $00000001;
  WINHTTP_AUTH_SCHEME_BASIC = $00000001;

const
  WINHTTP_ACCESS_TYPE_NO_PROXY = 1;
  WINHTTP_NO_PROXY_NAME = nil;
  WINHTTP_NO_PROXY_BYPASS = nil;
  WINHTTP_FLAG_SECURE = $00800000;
  WINHTTP_FLAG_ASYNC = $10000000;
  WINHTTP_NO_REFERER = nil;
  WINHTTP_DEFAULT_ACCEPT_TYPES = nil;
  WINHTTP_DISABLE_REDIRECTS = $00000002;
  WINHTTP_OPTION_DISABLE_FEATURE = 63;
  WINHTTP_DISABLE_COOKIES = $00000001;
  WINHTTP_ADDREQ_FLAG_COALESCE_WITH_COMMA = $40000000;
  WINHTTP_NO_ADDITIONAL_HEADERS = nil;
  WINHTTP_NO_REQUEST_DATA = nil;
  ERROR_WINHTTP_SECURE_FAILURE = 12175;
  ERROR_WINHTTP_CLIENT_AUTH_CERT_NEEDED = 12044;
  ERROR_WINHTTP_OPERATION_CANCELLED = 12017;
  ERROR_WINHTTP_CANNOT_CONNECT = 12029;
  ERROR_WINHTTP_CONNECTION_ERROR = 12030;
  ERROR_WINHTTP_INVALID_SERVER_RESPONSE = 12152;

const
  WINHTTP_SECURITY_FLAG_IGNORE_UNKNOWN_CA = $00000100;
  WINHTTP_SECURITY_FLAG_IGNORE_CERT_DATE_INVALID = $00002000;
  WINHTTP_SECURITY_FLAG_IGNORE_CERT_CN_INVALID = $00001000;
  WINHTTP_SECURITY_FLAG_IGNORE_CERT_WRONG_USAGE = $00000200;
  WINHTTP_OPTION_SECURITY_FLAGS = 31;

const
  WINHTTP_CALLBACK_STATUS_RESOLVING_NAME = $00000001;
  WINHTTP_CALLBACK_STATUS_NAME_RESOLVED = $00000002;
  WINHTTP_CALLBACK_STATUS_CONNECTING_TO_SERVER = $00000004;
  WINHTTP_CALLBACK_STATUS_CONNECTED_TO_SERVER = $00000008;
  WINHTTP_CALLBACK_STATUS_SENDING_REQUEST = $00000010;
  WINHTTP_CALLBACK_STATUS_REQUEST_SENT = $00000020;
  WINHTTP_CALLBACK_STATUS_RECEIVING_RESPONSE = $00000040;
  WINHTTP_CALLBACK_STATUS_RESPONSE_RECEIVED = $00000080;
  WINHTTP_CALLBACK_STATUS_CLOSING_CONNECTION = $00000100;
  WINHTTP_CALLBACK_STATUS_CONNECTION_CLOSED = $00000200;
  WINHTTP_CALLBACK_STATUS_HANDLE_CREATED = $00000400;
  WINHTTP_CALLBACK_STATUS_HANDLE_CLOSING = $00000800;
  WINHTTP_CALLBACK_STATUS_DETECTING_PROXY = $00001000;
  WINHTTP_CALLBACK_STATUS_REDIRECT = $00004000;
  WINHTTP_CALLBACK_STATUS_INTERMEDIATE_RESPONSE = $00008000;
  WINHTTP_CALLBACK_STATUS_SECURE_FAILURE = $00010000;
  WINHTTP_CALLBACK_STATUS_HEADERS_AVAILABLE = $00020000;
  WINHTTP_CALLBACK_STATUS_DATA_AVAILABLE = $00040000;
  WINHTTP_CALLBACK_STATUS_READ_COMPLETE = $00080000;
  WINHTTP_CALLBACK_STATUS_WRITE_COMPLETE = $00100000;
  WINHTTP_CALLBACK_STATUS_REQUEST_ERROR = $00200000;
  WINHTTP_CALLBACK_STATUS_SENDREQUEST_COMPLETE = $00400000;

  WINHTTP_CALLBACK_STATUS_GETPROXYFORURL_COMPLETE = $01000000;
  WINHTTP_CALLBACK_STATUS_CLOSE_COMPLETE          = $02000000;
  WINHTTP_CALLBACK_STATUS_SHUTDOWN_COMPLETE       = $04000000;

const
  WINHTTP_CALLBACK_STATUS_FLAG_CERT_REV_FAILED         = $00000001;
  WINHTTP_CALLBACK_STATUS_FLAG_INVALID_CERT            = $00000002;
  WINHTTP_CALLBACK_STATUS_FLAG_CERT_REVOKED            = $00000004;
  WINHTTP_CALLBACK_STATUS_FLAG_INVALID_CA              = $00000008;
  WINHTTP_CALLBACK_STATUS_FLAG_CERT_CN_INVALID         = $00000010;
  WINHTTP_CALLBACK_STATUS_FLAG_CERT_DATE_INVALID       = $00000020;
  WINHTTP_CALLBACK_STATUS_FLAG_CERT_WRONG_USAGE        = $00000040;
  WINHTTP_CALLBACK_STATUS_FLAG_SECURITY_CHANNEL_ERROR  = $80000000;

const
  WINHTTP_FLAG_SECURE_PROTOCOL_SSL2   = $00000008;
  WINHTTP_FLAG_SECURE_PROTOCOL_SSL3   = $00000020;
  WINHTTP_FLAG_SECURE_PROTOCOL_TLS1   = $00000080;
  WINHTTP_FLAG_SECURE_PROTOCOL_TLS1_1 = $00000200;
  WINHTTP_FLAG_SECURE_PROTOCOL_TLS1_2 = $00000800;
  WINHTTP_FLAG_SECURE_PROTOCOL_ALL    = (WINHTTP_FLAG_SECURE_PROTOCOL_TLS1 or
                                                 WINHTTP_FLAG_SECURE_PROTOCOL_TLS1_1 or
                                                 WINHTTP_FLAG_SECURE_PROTOCOL_TLS1_2);





{ API Enums for WINHTTP_CALLBACK_STATUS_REQUEST_ERROR: }
  API_RECEIVE_RESPONSE = (1);
  S_API_RECEIVE_RESPONSE = 'Receive Response';

  API_QUERY_DATA_AVAILABLE = (2);
  S_API_QUERY_DATA_AVAILABLE = 'Query Data Available';

  API_READ_DATA = (3);
  S_API_READ_DATA = 'Read Data';

  API_WRITE_DATA = (4);
  S_API_WRITE_DATA = 'Write Data';

  API_SEND_REQUEST = (5);
  S_API_SEND_REQUEST = 'Send Request';


  WINHTTP_CALLBACK_FLAG_RESOLVE_NAME = WINHTTP_CALLBACK_STATUS_RESOLVING_NAME or WINHTTP_CALLBACK_STATUS_NAME_RESOLVED;
  WINHTTP_CALLBACK_FLAG_CONNECT_TO_SERVER = WINHTTP_CALLBACK_STATUS_CONNECTING_TO_SERVER or WINHTTP_CALLBACK_STATUS_CONNECTED_TO_SERVER;
  WINHTTP_CALLBACK_FLAG_SEND_REQUEST = WINHTTP_CALLBACK_STATUS_SENDING_REQUEST or WINHTTP_CALLBACK_STATUS_REQUEST_SENT;
  WINHTTP_CALLBACK_FLAG_RECEIVE_RESPONSE = WINHTTP_CALLBACK_STATUS_RECEIVING_RESPONSE or WINHTTP_CALLBACK_STATUS_RESPONSE_RECEIVED;
  WINHTTP_CALLBACK_FLAG_CLOSE_CONNECTION = WINHTTP_CALLBACK_STATUS_CLOSING_CONNECTION or WINHTTP_CALLBACK_STATUS_CONNECTION_CLOSED;
  WINHTTP_CALLBACK_FLAG_HANDLES = WINHTTP_CALLBACK_STATUS_HANDLE_CREATED or WINHTTP_CALLBACK_STATUS_HANDLE_CLOSING;
  WINHTTP_CALLBACK_FLAG_DETECTING_PROXY = WINHTTP_CALLBACK_STATUS_DETECTING_PROXY;
  WINHTTP_CALLBACK_FLAG_REDIRECT = WINHTTP_CALLBACK_STATUS_REDIRECT;
  WINHTTP_CALLBACK_FLAG_INTERMEDIATE_RESPONSE = WINHTTP_CALLBACK_STATUS_INTERMEDIATE_RESPONSE;
  WINHTTP_CALLBACK_FLAG_SECURE_FAILURE = WINHTTP_CALLBACK_STATUS_SECURE_FAILURE;
  WINHTTP_CALLBACK_FLAG_SENDREQUEST_COMPLETE = WINHTTP_CALLBACK_STATUS_SENDREQUEST_COMPLETE;
  WINHTTP_CALLBACK_FLAG_HEADERS_AVAILABLE = WINHTTP_CALLBACK_STATUS_HEADERS_AVAILABLE;
  WINHTTP_CALLBACK_FLAG_DATA_AVAILABLE = WINHTTP_CALLBACK_STATUS_DATA_AVAILABLE;
  WINHTTP_CALLBACK_FLAG_READ_COMPLETE = WINHTTP_CALLBACK_STATUS_READ_COMPLETE;
  WINHTTP_CALLBACK_FLAG_WRITE_COMPLETE = WINHTTP_CALLBACK_STATUS_WRITE_COMPLETE;
  WINHTTP_CALLBACK_FLAG_REQUEST_ERROR = WINHTTP_CALLBACK_STATUS_REQUEST_ERROR;


  WINHTTP_CALLBACK_FLAG_ALL_COMPLETIONS = WINHTTP_CALLBACK_STATUS_SENDREQUEST_COMPLETE
                                                        or WINHTTP_CALLBACK_STATUS_HEADERS_AVAILABLE
                                                        or WINHTTP_CALLBACK_STATUS_DATA_AVAILABLE
                                                        or WINHTTP_CALLBACK_STATUS_READ_COMPLETE
                                                        or WINHTTP_CALLBACK_STATUS_WRITE_COMPLETE
                                                        or WINHTTP_CALLBACK_STATUS_REQUEST_ERROR;
  WINHTTP_CALLBACK_FLAG_ALL_NOTIFICATIONS = $ffffffff;

type
  LPWINHTTP_STATUS_CALLBACK = ^WINHTTP_STATUS_CALLBACK;
  WINHTTP_STATUS_CALLBACK = procedure(hInternet: HINTERNET; dwContext: Pointer; dwInternetStatus: DWORD;
    lpvStatusInformation: Pointer; dwStatusInformationLength: DWORD); stdcall;
  TWinHttpStatusCallback = WINHTTP_STATUS_CALLBACK;
  PWinHttpStatusCallback = ^TWinHttpStatusCallback;

type
  WINHTTP_ASYNC_RESULT = record
    dwResult: DWORD_PTR; { indicates which async API has encountered an error }
    dwError: DWORD;      { the error code if the API failed }
  end;

  LPWINHTTP_ASYNC_RESULT = ^WINHTTP_ASYNC_RESULT;
  TWinHttpAsyncResult = WINHTTP_ASYNC_RESULT;
  PWinHttpAsyncResult = ^TWinHttpAsyncResult;

type
  WINHTTP_WEB_SOCKET_OPERATION = (
    WINHTTP_WEB_SOCKET_SEND_OPERATION = 0,
    WINHTTP_WEB_SOCKET_RECEIVE_OPERATION = 1,
    WINHTTP_WEB_SOCKET_CLOSE_OPERATION = 2,
    WINHTTP_WEB_SOCKET_SHUTDOWN_OPERATION = 3);
  PWINHTTP_WEB_SOCKET_OPERATION = ^WINHTTP_WEB_SOCKET_OPERATION;

type
  WINHTTP_WEB_SOCKET_ASYNC_RESULT = record
    AsyncResult: WINHTTP_ASYNC_RESULT; { The result of a WebSocket operation. }
    Operation: WINHTTP_WEB_SOCKET_OPERATION;      { The type of WebSocket operation. }
  end;
  LPWINHTTP_WEB_SOCKET_ASYNC_RESULT = ^WINHTTP_WEB_SOCKET_ASYNC_RESULT;
  TWinHttpWebSocketAsyncResult = WINHTTP_WEB_SOCKET_ASYNC_RESULT;
  PWinHttpWebSocketAsyncResult = ^TWinHttpWebSocketAsyncResult;


type
  WINHTTP_WEB_SOCKET_BUFFER_TYPE = (
    WINHTTP_WEB_SOCKET_BINARY_MESSAGE_BUFFER_TYPE = 0,
    WINHTTP_WEB_SOCKET_BINARY_FRAGMENT_BUFFER_TYPE = 1,
    WINHTTP_WEB_SOCKET_UTF8_MESSAGE_BUFFER_TYPE = 2,
    WINHTTP_WEB_SOCKET_UTF8_FRAGMENT_BUFFER_TYPE = 3,
    WINHTTP_WEB_SOCKET_CLOSE_BUFFER_TYPE = 4);
  PWINHTTP_WEB_SOCKET_BUFFER_TYPE = ^WINHTTP_WEB_SOCKET_BUFFER_TYPE;

type
  WINHTTP_WEB_SOCKET_STATUS = record
    dwBytesTransferred: DWORD; { The amount of bytes transferred in the operation. }
    eBufferType: WINHTTP_WEB_SOCKET_BUFFER_TYPE;      { The type of data in the buffer. }
  end;
  LPWINHTTP_WEB_SOCKET_STATUS = ^WINHTTP_WEB_SOCKET_STATUS;
  TWinHttpWebSocketStatus = WINHTTP_WEB_SOCKET_STATUS;
  PWinHttpWebSocketStatus = ^TWinHttpWebSocketStatus;

Const
  WINHTTP_OPTION_UPGRADE_TO_WEB_SOCKET = 114;
  WINHTTP_OPTION_WEB_SOCKET_CLOSE_TIMEOUT = 115;
  WINHTTP_OPTION_WEB_SOCKET_KEEPALIVE_INTERVAL = 116;
  WINHTTP_OPTION_DECOMPRESSION = 117;
  WINHTTP_OPTION_WEB_SOCKET_RECEIVE_BUFFER_SIZE = 122;
  WINHTTP_OPTION_WEB_SOCKET_SEND_BUFFER_SIZE = 123;

type

  WINHTTP_WEB_SOCKET_CLOSE_STATUS = (
    WINHTTP_WEB_SOCKET_SUCCESS_CLOSE_STATUS = 1000,
    WINHTTP_WEB_SOCKET_ENDPOINT_TERMINATED_CLOSE_STATUS = 1001,
    WINHTTP_WEB_SOCKET_PROTOCOL_ERROR_CLOSE_STATUS = 1002,
    WINHTTP_WEB_SOCKET_INVALID_DATA_TYPE_CLOSE_STATUS = 1003,
    WINHTTP_WEB_SOCKET_EMPTY_CLOSE_STATUS = 1005,
    WINHTTP_WEB_SOCKET_ABORTED_CLOSE_STATUS = 1006,
    WINHTTP_WEB_SOCKET_INVALID_UTF8_CLOSE_STATUS = 1007,
    WINHTTP_WEB_SOCKET_POLICY_VIOLATION_CLOSE_STATUS = 1008,
    WINHTTP_WEB_SOCKET_MESSAGE_TOO_BIG_CLOSE_STATUS = 1009,
    WINHTTP_WEB_SOCKET_UNSUPPORTED_EXTENSIONS_CLOSE_STATUS = 1010,
    WINHTTP_WEB_SOCKET_SERVER_ERROR_CLOSE_STATUS = 1011,
    WINHTTP_WEB_SOCKET_SECURE_HANDSHAKE_ERROR_CLOSE_STATUS = 1015
  );
  PWINHTTP_WEB_SOCKET_CLOSE_STATUS = ^WINHTTP_WEB_SOCKET_CLOSE_STATUS;


Type
TsgcWinHttpCheckPlatform = function: BOOL; stdcall;
function WinHttpCheckPlatform: BOOL; stdcall;

Type
TsgcWinHttpCloseHandle = function(hInternet: HINTERNET): BOOL; stdcall;
function WinHttpCloseHandle(hInternet: HINTERNET): BOOL; stdcall;

Type
TsgcWinHttpOpen = function(pszAgentW: LPCWSTR; dwAccessType: DWORD; pszProxyW: LPCWSTR; pszProxyBypassW: LPCWSTR;
  dwFlags: DWORD): HINTERNET; stdcall;
function WinHttpOpen(pszAgentW: LPCWSTR; dwAccessType: DWORD; pszProxyW: LPCWSTR; pszProxyBypassW: LPCWSTR;
  dwFlags: DWORD): HINTERNET; stdcall;

Type
TsgcWinHttpConnect = function(hSession: HINTERNET; pswzServerName: LPCWSTR; nServerPort: INTERNET_PORT;
  dwReserved: DWORD): HINTERNET; stdcall;
function WinHttpConnect(hSession: HINTERNET; pswzServerName: LPCWSTR; nServerPort: INTERNET_PORT;
  dwReserved: DWORD): HINTERNET; stdcall;

Type
TsgcWinHttpOpenRequest = function(hConnect: HINTERNET; pwszVerb: LPCWSTR; pwszObjectName: LPCWSTR; pwszVersion: LPCWSTR;
  pwszReferrer: LPCWSTR; ppwszAcceptTypes: PLPWSTR; dwFlags: DWORD): HINTERNET; stdcall;
function WinHttpOpenRequest(hConnect: HINTERNET; pwszVerb: LPCWSTR; pwszObjectName: LPCWSTR; pwszVersion: LPCWSTR;
  pwszReferrer: LPCWSTR; ppwszAcceptTypes: PLPWSTR; dwFlags: DWORD): HINTERNET; stdcall;
